# minesweeper

./: .gitignore  CMakeLists.txt  CODE_STYLE.md  Field.cpp  Field.h  Makefile  README.md  TODO  main.cpp
assets/: field_textures.xcf
include/: basefield.h  enums.h  field.h  termfield.h
libs/: BaseField.cpp  BaseField.h  Field.h  FieldTexture.cpp  FieldTexture.h  SFMLField.cpp  SFMLField.h  TermField.cpp  TermField.h
src/: basefield.c  basefield.cpp  main.c  main.cpp  termfield.c  termfield.cpp
